--- a/2D Controller/HTML/CLASSES/SCRIPTING/ENV-QUERY/PUBLIC-METHODS/wall-above.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/ENV-QUERY/PUBLIC-METHODS/wall-above.html
@@ -22,9 +22,17 @@
         <h2>Declaration</h2>
         <p>public bool <b>WallAbove</b>();</p>
         <br>
+        <h2>Returns</h2>
+        <p>
+            True, if a collider is found above the character's head, otherwise false.
+        </p>
+        <br>
         <h2>Description</h2>
         <p>
-            Description goes here.
+            Checks if there is a wall above of the character's head.
+            <br> <br>
+            This function performs a <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Physics2D.BoxCast.html">Physics2D.BoxCast</a> in the upward direction, taking
+            into account the size and position of the <a class="redirect-link" href="set-active-collider.html">activeCollider</a>.
         </p>
         <br>
         <p>
@@ -33,17 +41,40 @@
 <pre class="code-block">
 using UnityEngine;
 
+[<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/RequireComponent.html">RequireComponent</a>(typeof(<a class="redirect-link" href="../env-quey.html">CharacterEnvironmentalQuery</a>))]
 public class Example : <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.html">Monobehaviour</a>
 {
+    [<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/SerializeField.html">SerializeField</a>] private <a class="redirect-link" href="https://docs.unity3d.com/Manual/class-CapsuleCollider2D.html">CapsuleCollider2D</a> m_Collider;
+
+    private <a class="redirect-link" href="../env-quey.html">CharacterEnvironmentalQuery</a> envQuery;
+
+    private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Awake.html">Awake</a>()
+    {
+        envQuery = <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/GameObject.GetComponent.html">GetComponent</a>&LeftAngleBracket;<a class="redirect-link" href="../env-quey.html">CharacterEnvironmentalQuery</a>&RightAngleBracket;();
+        envQuery.<a class="redirect-link" href="../PUBLIC-METHODS/set-active-collider.html">SetActiveCollider</a>(m_Collider);
+    }
+
     private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Update.html">Update</a>()
     {
-        
+        if (envQuery.<b>WallAbove</b>())
+        {
+            <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Debug.Log.html">Debug.Log</a>("There is a wall above the charater's head");
+        }
+        else
+        {
+            <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Debug.Log.html">Debug.Log</a>("There is not collider at the specified distance");
+        }
     }
 }
 </pre>
         <hr>
         <h2>Declaration</h2>
         <p>public bool <b>WallAbove</b>(float <b>distance</b>);</p>
+        <br>
+        <h2>Returns</h2>
+        <p>
+            True, if a collider is found at the specified distance in the upward direction, otherwise false.
+        </p>
         <br>
         <div class="table-division">
             <span class="table-title">Parameters</span>
@@ -57,20 +88,41 @@ public class Example : <a class="redirect-link" href="https://docs.unity3d.com/S
         <br>
         <h2>Description</h2>
         <p>
-            Description goes here.
+            Checks if there is a wall above of the character's head.
+            <br> <br>
+            Same as the above, but with this overload you can override the default cast distance.
         </p>
         <br>
         <p>
-            Method use example goes here.
+            This is an example of how you can use this method in your script.
         </p>
 <pre class="code-block">
 using UnityEngine;
 
+[<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/RequireComponent.html">RequireComponent</a>(typeof(<a class="redirect-link" href="../env-quey.html">CharacterEnvironmentalQuery</a>))]
 public class Example : <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.html">Monobehaviour</a>
 {
+    [<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/SerializeField.html">SerializeField</a>] private <a class="redirect-link" href="https://docs.unity3d.com/Manual/class-CapsuleCollider2D.html">CapsuleCollider2D</a> m_Collider;
+    [<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/SerializeField.html">SerializeField</a>] private float distance = 5f;
+
+    private <a class="redirect-link" href="../env-quey.html">CharacterEnvironmentalQuery</a> envQuery;
+
+    private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Awake.html">Awake</a>()
+    {
+        envQuery = <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/GameObject.GetComponent.html">GetComponent</a>&LeftAngleBracket;<a class="redirect-link" href="../env-quey.html">CharacterEnvironmentalQuery</a>&RightAngleBracket;();
+        envQuery.<a class="redirect-link" href="../PUBLIC-METHODS/set-active-collider.html">SetActiveCollider</a>(m_Collider);
+    }
+
     private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Update.html">Update</a>()
     {
-
+        if (envQuery.<b>WallAbove</b>(distance))
+        {
+            <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Debug.Log.html">Debug.Log</a>("There is a wall above the charater's head at the maximum of " + distance + " Unity units above");
+        }
+        else
+        {
+            <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Debug.Log.html">Debug.Log</a>("There is not a collider at the specified distance");
+        }
     }
 }
 </pre>
