More documentation added

--- a/2D Controller/HTML/CLASSES/SCRIPTING/ENV-QUERY/PUBLIC-METHODS/ledge-grab-check.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/ENV-QUERY/PUBLIC-METHODS/ledge-grab-check.html
@@ -49,10 +49,10 @@
             <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Physics2D.OverlapBox.html">Physics2D.OverlapBox</a> cast.
             Successful detection of a ledge is confirmed if the circle cast returns true while the box cast returns false. In the event that both casts return true, it indicates the
             presence of a wall. The position of the circle is determined by the transform provided in the inspector of the component, while the position of the box lies on top of
-            the circle.
+            the circle. Refer to the <a class="redirect-link" href="#">manual</a> for more information.
 
             <br> <br>
-            Note the use of <b>exitLedgeGrab</b> in the example below. When you need your character to exit a ledge grab/climb state, set this flag to true.
+            Note the use of the <b>exitLedgeGrab</b> flag in the example below. When the character needs to exit a ledge grab/climb state, this flag is set to true.
             The <b>LedgeGrabCheck</b> function will then indicate when the character is ready to grab a ledge again. Once it returns false, signifying that
             a ledge is no longer detected, it will also reset the provided boolean back to false.
         </p>
@@ -93,6 +93,8 @@ public class Example : <a class="redirect-link" href="https://docs.unity3d.com/S
         if (<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Input.GetKeyDown.html">Input.GetKeyDown</a>(<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/KeyCode.Escape.html">KeyCode.Escape</a>))
         {
             characterRb.isKinematic = false;
+
+            // This will force the above 'if' statement to not be executed, preventing the character from re-entering 'ledge grab' state.
             exitLedgeGrab = true;
         }
     }
