--- a/2D Controller/HTML/CLASSES/classes.html
+++ b/2D Controller/HTML/CLASSES/classes.html
@@ -25,12 +25,12 @@
                 <tr>
                     <td class="label-classes">CharacterMovement</td>
                     <td class="description-manual"><a class="redirect-link" href="#">Manual</a></td>
-                    <td class="description-scripting"><a class="redirect-link" href="#">Scripting</a></td>
+                    <td class="description-scripting"><a class="redirect-link" href="SCRIPTING/CHARACTER-MOVEMENT/character-movement.html">Scripting</a></td>
                 </tr>
                 <tr>
                     <td class="label-classes">CharacterSlide</td>
                     <td class="description-manual"><a class="redirect-link" href="#">Manual</a></td>
-                    <td class="description-scripting"><a class="redirect-link" href="#">Scripting</a></td>
+                    <td class="description-scripting"><a class="redirect-link" href="SCRIPTING/CHARACTER-SLIDE/character-slide.html">Scripting</a></td>
                 </tr>
                 <tr>
                     <td class="label-classes">CharacterLedgeGrab</td>
@@ -51,7 +51,7 @@
                 <tr>
                     <td class="label">CharacterCombat</td>
                     <td><a class="redirect-link" href="#">Manual</a></td>
-                    <td><a class="redirect-link" href="SCRIPTING/HUMANOID-CONTROLLER/humanoid-controller.html">Scripting</a></td>
+                    <td><a class="redirect-link" href="#">Scripting</a></td>
                 </tr>
                 <tr>
                     <td class="label-classes">AttackSO</td>
