--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-MOVEMENT/PUBLIC-PROPERTIES/current-speed.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-MOVEMENT/PUBLIC-PROPERTIES/current-speed.html
@@ -61,7 +61,9 @@ public class Example : <a class="redirect-link" href="../../HUMANOID-CONTROLLER/
         <p>
         Unfortunately, providing a specific example demonstrating when and how to update the value of <b>CurrentSpeed</b> is not feasible here, as it requires a custom action
         to precede it. Instead of presenting an example in this context, please refer to the <b>CharacterDash_OnDashDistanceCovered</b> event listener in the
-        <a class="redirect-link" href="../../HUMANOID-CONTROLLER/humanoid-controller.html">HumanoidController</a> script.
+        <a class="redirect-link" href="../../HUMANOID-CONTROLLER/humanoid-controller.html">HumanoidController</a> script. Navigate to your project files:
+        <br>
+        <b>Assets -> 2D Character Controller -> _Scripts -> Character -> Controllers -> HumanoidController.cs</b>
         <br> <br>
         When the character executes a dash, their speed surpasses the designated <a class="redirect-link" href="top-speed.html">TopSpeed</a>. This is the moment when you
         should ensure that CurrentSpeed reflects this change. Neglecting this step could lead to undesired outcomes; for instance, if the character dashes immediately
