--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-MOVEMENT/PUBLIC-PROPERTIES/move-direction.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-MOVEMENT/PUBLIC-PROPERTIES/move-direction.html
@@ -34,7 +34,8 @@
         <p>
         Unfortunately, providing a specific example demonstrating when and how to update the value of <b>MoveDirection</b> is not feasible here, as it requires a custom action
         to precede it. Instead of presenting an example in this context, please refer to the <b>CharacterDash_OnDashDistanceCovered</b> event listener in the
-        <a class="redirect-link" href="../../HUMANOID-CONTROLLER/humanoid-controller.html">HumanoidController</a> script. Navigate to your project files: <br>
+        <a class="redirect-link" href="../../HUMANOID-CONTROLLER/humanoid-controller.html">HumanoidController</a> script. Navigate to your project files:
+        <br>
         <b>Assets -> 2D Character Controller -> _Scripts -> Character -> Controllers -> HumanoidController.cs</b>
         <br> <br>
         When the character executes a dash, the <b>MoveDirection</b> property is updated with the value of the character's right direction
